--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -2,6 +2,9 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="{{.Description | default .Site.Params.SiteDescription}}">
 
+<link rel="shortcut icon" href="/favicon.png" type="image/x-icon">
+<link rel="icon" href="/favicon.png" type="image/x-icon">
+
 {{ hugo.Generator }}
 
 <!-- Permalink & RSSlink -->
